# FlaskCreditDesign

./: .gitignore  .replit  app.py  forms.py  main.py  models.py  pyproject.toml  replit.md
.local/state/replit/agent/: progress_tracker.md
.local/state/replit/agent/filesystem/: filesystem_state.json
attached_assets/: Pasted-exemple-de-cahier-des-charges-pour-un-logiciel-de-gestion-de-cr-dit-et-d-pargne-Il-s-agit-d-un-doc-1761231369121_1761231369127.txt
static/: manifest.json  service-worker.js
static/css/: style.css
templates/: analytics.html  base.html  client_credit_history.html  client_detail.html  client_form.html  clients.html  credit_detail.html  credit_form.html  credits.html  dashboard.html  loan_simulation.html  login.html  map.html  notifications.html  product_form.html  products.html  reports.html  savings.html  savings_detail.html  savings_form.html  settings.html  user_form.html
